fix HoverCard alignment

--- a/src/ui/cards/HoverCard/HoverCard.scss
+++ b/src/ui/cards/HoverCard/HoverCard.scss
@@ -15,6 +15,7 @@
   top: -1px;
   z-index: 1;
   opacity: 0;
+  max-width: none;
 }
 
 .show {
